Commit after add entity ExternalApi

--- a/src/main/webapp/i18n/ar-ly/global.json
+++ b/src/main/webapp/i18n/ar-ly/global.json
@@ -34,6 +34,7 @@
         "modif": "Modif",
         "drtypab": "Drtypab",
         "drabsen": "Drabsen",
+        "externalApi": "External Api",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
