Commit after list-motifa

--- a/src/main/webapp/i18n/ar-ly/global.json
+++ b/src/main/webapp/i18n/ar-ly/global.json
@@ -126,6 +126,9 @@
       "open": "فتح",
       "save": "حفظ",
       "view": "عرض",
+      "resagent": "أعوان إحتياطيون",
+      "absagents": "أعوان متغيبون",
+      "offwrest": "أعوان في راحة اسبوعية",
       "show": "Show {{otherEntity}}"
     },
     "detail": {
