--- a/src/main/webapp/i18n/ar-ly/deprotat.json
+++ b/src/main/webapp/i18n/ar-ly/deprotat.json
@@ -53,7 +53,8 @@
       "idapex": "Idapex",
       "plusmoins": "Plusmoins",
       "a": "A",
-      "r": "R"
+      "r": "R",
+      "depart": "Depart"
     }
   }
 }
