--- a/src/main/webapp/i18n/en/depart.json
+++ b/src/main/webapp/i18n/en/depart.json
@@ -51,7 +51,8 @@
       "cd2": "Cd 2",
       "cd3": "Cd 3",
       "decmotifcha": "Decmotifcha",
-      "decmotifrea": "Decmotifrea"
+      "decmotifrea": "Decmotifrea",
+      "deprotat": "Deprotat"
     }
   }
 }
