--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -35,6 +35,7 @@
         "drtypab": "Drtypab",
         "drabsen": "Drabsen",
         "externalApi": "External Api",
+        "displaybus": "Displaybus",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
