--- a/src/main/webapp/i18n/ar-ly/deprotat.json
+++ b/src/main/webapp/i18n/ar-ly/deprotat.json
@@ -40,7 +40,7 @@
       "harrrete": "Harrrete",
       "rannul": "Rannul",
       "km": "Km",
-      "motifa": "Motifa",
+      "motif_a": "Motif_a",
       "observ": "Observ",
       "recettesvoy": "Recettesvoy",
       "nbrevoy": "Nbrevoy",
@@ -50,7 +50,7 @@
       "cd3": "Cd 3",
       "decmotifcha": "Decmotifcha",
       "decmotifrea": "Decmotifrea",
-      "idapex": "Idapex",
+      "id_apex": "Id_apex",
       "plusmoins": "Plusmoins",
       "a": "A",
       "r": "R",
